UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PSRExchangeDetail__c/ftr_PSRExchangeDetail__c.object-meta.xml
<CustomObject>
    <label>ftr PSRExchangeDetail</label>
    <nameField>
        <label>ftr PSRExchangeDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ftr PSRExchangeDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>