UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PSRExchangeDetail__c/fields/Company_Indicator_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Indicator_Code__c</fullName>
    <label>Company Indicator Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>