UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PSRExchangeDetail__c/fields/Company_Indicator_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Indicator_Name__c</fullName>
    <label>Company Indicator Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>