UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PSRExchangeDetail__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <label>Exchange</label>
    <length>50</length>
    <type>Text</type>
</CustomField>