UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PSRExchangeDetail__c/fields/FICT_NPA__c.field-meta.xml
<CustomField>
    <fullName>FICT_NPA__c</fullName>
    <label>FICT NPA</label>
    <length>15</length>
    <type>Text</type>
</CustomField>