UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PSRExchangeDetail__c/fields/NPANXX__c.field-meta.xml
<CustomField>
    <fullName>NPANXX__c</fullName>
    <label>NPANXX</label>
    <length>15</length>
    <type>Text</type>
</CustomField>