UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PSRExchangeDetail__c/fields/NXX__c.field-meta.xml
<CustomField>
    <fullName>NXX__c</fullName>
    <label>NXX</label>
    <length>15</length>
    <type>Text</type>
</CustomField>