UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PSRExchangeDetail__c/fields/WC_CLLI__c.field-meta.xml
<CustomField>
    <fullName>WC_CLLI__c</fullName>
    <label>WC CLLI</label>
    <length>18</length>
    <type>Text</type>
</CustomField>